k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cabpool-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cabpool-backend
  template:
    metadata:
      labels:
        app: cabpool-backend
    spec:
      containers:
        - name: backend
          image: bambo0st/backend:latest
          imagePullPolicy: Always  
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1         # Allows 1 extra pod to be created above the desired count
  #     maxUnavailable: 1   # Ensures that no more than 1 pod will be unavailable during the update
