k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cabpool-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cabpool-frontend
  template:
    metadata:
      labels:
        app: cabpool-frontend
    spec:
      containers:
        - name: frontend
          image: bambo0st/frontend:latest
          imagePullPolicy: Always  
          ports:
            - containerPort: 4173
          resources:
            requests:
              memory: "256Mi"   
              cpu: "250m"       
            limits:
              memory: "512Mi"   
              cpu: "500m"
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1         # Allows 1 extra pod to be created above the desired count
  #     maxUnavailable: 1   # Ensures that no more than 1 pod will be unavailable during the update
